--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,15 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/bg_color">
+    android:background="@color/bg_color"
+    android:orientation="vertical">
 
     <android.support.v7.widget.SearchView
         android:id="@+id/searchView"
-        android:layout_width="wrap_content"
-        android:elevation="2dp"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
         android:background="#fff"
-        android:layout_height="45dp">
+        android:elevation="2dp">
+
+        <requestFocus />
     </android.support.v7.widget.SearchView>
 
     <android.support.v7.widget.RecyclerView
@@ -24,9 +29,9 @@
         android:id="@+id/text_empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textStyle="bold"
         android:layout_gravity="center"
         android:text="No Result Found"
+        android:textSize="18sp"
+        android:textStyle="bold"
         android:visibility="gone"></TextView>
 </LinearLayout>
